<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/functionPad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".98" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="0"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.0"
        android:background="@android:color/background_light"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".16"
           
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonClearMemory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="#ECEAEB"
                android:text="@string/buttonClearMemory"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonRecallMemory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="#ECEAEB"
                android:text="@string/buttonRecallMemory"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonAddToMemory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="#ECEAEB"
                android:text="@string/buttonAddToMemory"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonSubtractFromMemory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="#4E92F7"
                android:text="@string/buttonSubtractFromMemory"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".16"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonSquareRoot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/buttonSquareRoot"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonSquared"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/buttonSquared"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonInvert"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/buttonInvert"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonToggleSign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="#4E92F7"
                android:text="@string/buttonToggleSign"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".16"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonSine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/buttonSine"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonCosine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/buttonCosine"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonTangent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/buttonTangent"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="#4E92F7"
                android:text="@string/buttonDivide"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".031"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.0"
        android:background="@color/fbutton_color_silver"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".10"
           
            android:orientation="horizontal"
            android:textColor="@android:color/black" >

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/button7"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/button8"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/button9"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="#4E92F7"
                android:text="@string/buttonMultiply"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".10"
            android:background="@null"
            android:orientation="horizontal"
            android:textColor="@android:color/white" >

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/button4"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/button5"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/button6"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="#4E92F7"
                android:text="@string/buttonAdd"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".10"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/button1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/button2"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/button3"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSubtract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="#4E92F7"
                android:text="@string/buttonSubtract"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".10"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/button0"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonDecimalPoint"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/buttonDecimalPoint"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="@drawable/button_background"
                android:text="@string/buttonClear"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:background="#4E92F7"
                android:text="@string/buttonEquals"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>